Fix favorite star alignment with header
Refs #556

--- a/app/pages/resource/resource-info/resource-info.less
+++ b/app/pages/resource/resource-info/resource-info.less
@@ -2,6 +2,8 @@
   .favorite-button {
     float: right;
     font-size: 32px;
+    line-height: 32px;
+    margin-top: @line-height-computed;
   }
 
   h1 {
